tests/sksl/errors/ArraySplitDimensionsInStruct.dsl.glsl
### Compilation failed:

error: arrays are not yet fully supported
error: expected an identifier, but found '2'
error: expected a type, but found ']'
3 errors
